Tutorial changed. v2.0 updated. Problem solving section.

--- a/doc/tutorial/supercell_tutorial.bib
+++ b/doc/tutorial/supercell_tutorial.bib
@@ -1,7 +1,6 @@
 @article{Dun2014,
 author = {Dun, Chaochao and Holzwarth, N. a W and Li, Yuan and Huang, Wenxiao and Carroll, David L.},
 doi = {10.1063/1.4876447},
-file = {:home/kirill/Documents/Mendeley Desktop/Dun et al. - Journal of Applied Physics - 2014 - Cu2ZnSnSxO4-x and Cu 2ZnSnSxSe4-x First principles simulations of optimal alloy configu.pdf:pdf},
 issn = {10897550},
 journal = {Journal of Applied Physics},
 number = {19},
@@ -13,7 +12,6 @@ year = {2014}
 abstract = {We apply first principles quantum mechanical techniques to the study of the solid solution Si1-xGexO2 of $\alpha$-quartz where silicon atoms are progressively substituted with germanium atoms, to different extents, as a function of the substitutional fraction x. For the first time, the whole range of the substitution (x = 0.0, 0.1[Formula: see text], 0.[Formula: see text], 0.5, 0.[Formula: see text], 0.8[Formula: see text], 1.0), including pure end-members $\alpha$-SiO2 and $\alpha$-GeO2, is explored. An elongated supercell (doubled along the c crystallographic axis) is built with respect to the unit cell of pure $\alpha$-quartz and a set of 13 symmetry-independent configurations is considered. Their structural, energetic, dielectric, elastic and piezoelectric properties are computed and analyzed. All the calculations are performed using the CRYSTAL14 program with a Gaussian-type function basis set with pseudopotentials, and the hybrid functional PBE0; all geometries are fully optimized at this level of theory. In particular, for each configuration, fourth-rank elastic and compliance tensors and third-rank direct and converse piezoelectric tensors are computed. It has already been shown that the structural distortion of the solid solution increases, almost linearly, as the substitutional fraction x increases. The piezoelectric properties of the Si1-xGexO2 solid solution are found to increase with x, with a similar quasi-linear behavior. The electromechanical coupling coefficients are enhanced as well and the linear trend recently predicted by Ranieri et al (2011 Inorg. Chem. 50 4632) can be confirmed from first principles calculations. These doped crystals do represent good candidates for technological applications requiring high piezoelectric coupling and high thermal stability.},
 author = {El-Kelany, Kh E and Erba, a and Carbonni\`{e}re, P and R\'{e}rat, M},
 doi = {10.1088/0953-8984/26/20/205401},
-file = {:home/kirill/Documents/Mendeley Desktop/El-Kelany et al. - Journal of physics. Condensed matter an Institute of Physics journal - 2014 - Piezoelectric, elastic, structural and.pdf:pdf},
 issn = {1361-648X},
 journal = {Journal of physics. Condensed matter : an Institute of Physics journal},
 number = {20},
@@ -27,7 +25,6 @@ year = {2014}
 @article{Grau2007,
 author = {Grau-Crespo, R and Hamad, S and Catlow, C R a and Leeuw, N H De},
 doi = {10.1088/0953-8984/19/25/256201},
-file = {:home/kirill/Documents/Mendeley Desktop/Grau-Crespo et al. - Journal of Physics Condensed Matter - 2007 - Symmetry-adapted configurational modelling of fractional site occupanc.pdf:pdf},
 issn = {0953-8984},
 journal = {Journal of Physics: Condensed Matter},
 month = jun,
@@ -42,7 +39,6 @@ year = {2007}
 abstract = {The crystal structure of the iron oxide $\gamma$-Fe\$\_2\$O\$\_3\$ is usually reported in either the cubic system (space group P4(3)32) with partial Fe vacancy disorder or in the tetragonal system (space group P4(1)2(1)2) with full site ordering and c/a≈3. Using a supercell of the cubic structure, we obtain the spectrum of energies of all the ordered configurations which contribute to the partially disordered P4(3)32 cubic structure. Our results show that the configuration with space group P4(1)2(1)2 is indeed much more stable than the others, and that this stability arises from a favourable electrostatic contribution, as this configuration exhibits the maximum possible homogeneity in the distribution of iron cations and vacancies. Maghemite is therefore expected to be fully ordered in equilibrium, and deviations from this behaviour should be associated with metastable growth, extended anti-site defects and surface effects in the case of small nanoparticles. The confirmation of the ordered tetragonal structure allows us to investigate the electronic structure of the material using density functional theory (DFT) calculations. The inclusion of a Hubbard (DFT + U) correction allows the calculation of a band gap in good agreement with experiment. The value of the gap is dependent on the electron spin, which is the basis for the spin-filtering properties of maghemite.},
 author = {Grau-Crespo, Ricardo and Al-Baitai, Asmaa Y and Saadoune, Iman and {De Leeuw}, Nora H},
 doi = {10.1088/0953-8984/22/25/255401},
-file = {:home/kirill/Documents/Mendeley Desktop/Grau-Crespo et al. - Journal of physics. Condensed matter an Institute of Physics journal - 2010 - Vacancy ordering and electronic str.pdf:pdf},
 issn = {1361-648X},
 journal = {Journal of physics. Condensed matter : an Institute of Physics journal},
 month = jun,
@@ -58,7 +54,6 @@ year = {2010}
 abstract = {The \ce{PbZr_{x}Ti_{1-x}O3} (PZT) disordered solid solution is widely used in piezoelectric applications$\backslash$ndue to its excellent electromechanical properties. The disorder is$\backslash$ncaused by the random arrangement of B cations. To understand the$\backslash$nrelationship between properties of constituent atoms, local structure,$\backslash$nand compositional phase transitions, we examine the response of the$\backslash$nindividual Pb atoms, B cations, and oxygen cages to the variation$\backslash$nin the Zr/Ti arrangement and composition through first-principles$\backslash$ndensity-functional-theory (DFT) calculations on a variety of PZT$\backslash$nsupercells. We use a statistical analysis of the relaxed DFT structures$\backslash$nto identify crystal chemical structural motifs present in the Zr-rich$\backslash$nrhombohedral, 50/50 monoclinic, and Ti-rich tetragonal phases of$\backslash$nPZT and to examine the influence of composition variation on the$\backslash$nmotifs. We find that the distortions of the structure away from the$\backslash$nideal perovskite structure are governed by an interplay of bonding,$\backslash$nelectrostatic, and short-range repulsive interactions that depends$\backslash$non the B-cation arrangement. For Pb-atom displacements, there is$\backslash$na competition between electrostatic and bonding interactions that$\backslash$nfavor ordered collinear displacements, and local repulsive interactions$\backslash$nthat favor disorder. This competition is strongly affected by the$\backslash$nchanges in Zr/Ti composition and leads to compositional phase boundaries$\backslash$nin PZT.},
 author = {Grinberg, Ilya and Cooper, Valentino R. and Rappe, Andrew M.},
 doi = {10.1103/PhysRevB.69.144118},
-file = {:home/kirill/Documents/Mendeley Desktop/Grinberg, Cooper, Rappe - 2004 - Oxide chemistry and local structure of PbZrxTi 1-xO3 studied by density-functional theory supercell cal.pdf:pdf},
 isbn = {1098-0121
 1550-235X},
 issn = {01631829},
@@ -74,7 +69,6 @@ author = {Cadars, Sylvian and {Ho Ahn}, Nak and Okhotnikov, Kirill and Shin, Jih
 doi = {10.1016/j.ssnmr.2017.04.001},
 issn = {09262040},
 journal = {Solid State Nuclear Magnetic Resonance},
-mendeley-groups = {my{\_}papers},
 month = {apr},
 title = {{Modeling Short-Range Substitution Order and Disorder in Crystals: Application to the Ga/Si Distribution in a Natrolite Zeolite}},
 url = {http://linkinghub.elsevier.com/retrieve/pii/S0926204017300279},
@@ -84,7 +78,6 @@ year = {2017}
 abstract = {Structural models used in calculations of properties of substitutionally random A1-xBx alloys are usually constructed by randomly occupying each of the N sites of a periodic cell by A or B. We show that it is possible to design ‘‘special quasirandom structures’’ (SQS’s) that mimic for small N (even N=8) the first few, physically most relevant radial correlation functions of a perfectly random structure far better than the standard technique does. We demonstrate the usefulness of these SQS’s by calculating optical and thermodynamic properties of a number of semiconductor alloys in the local-density formalism.},
 author = {Zunger, Alex and Wei, S. H. and Ferreira, L. G. and Bernard, James E.},
 doi = {10.1103/PhysRevLett.65.353},
-file = {:home/kirill/Documents/Mendeley Desktop/Zunger et al. - Physical Review Letters - 1990 - Special quasirandom structures.pdf:pdf},
 isbn = {0031-9007},
 issn = {00319007},
 journal = {Physical Review Letters},
@@ -95,3 +88,81 @@ title = {{Special quasirandom structures}},
 volume = {65},
 year = {1990}
 }
+@article{cif2cell,
+abstract = {The CIF2Cell program generates the geometrical setup for a number of electronic structure programs based on the crystallographic information in a Crystallographic Information Framework (CIF) file. The program will retrieve the space group number, Wyckoff positions and crystallographic parameters, make a sensible choice for Bravais lattice vectors (primitive or principal cell) and generate all atomic positions. Supercells can be generated and alloys are handled gracefully. The code currently has output interfaces to the electronic structure programs ABINIT, CASTEP, CPMD, Crystal, Elk, Exciting, EMTO, Fleur, RSPt, Siesta and VASP. © 2011 Elsevier B.V. All rights reserved.},
+author = {Bj\"{o}rkman, Torbj\"{o}rn},
+doi = {10.1016/j.cpc.2011.01.013},
+isbn = {9781846289514},
+issn = {00104655},
+journal = {Computer Physics Communications},
+keywords = {Crystallographic databases,Crystallography,Electron density of states and band structure of c,Electronic structure calculations,Structure of solids and liquids},
+number = {5},
+pages = {1183--1186},
+publisher = {Elsevier B.V.},
+title = {{CIF2Cell: Generating geometries for electronic structure programs}},
+url = {http://dx.doi.org/10.1016/j.cpc.2011.01.013},
+volume = {182},
+year = {2011}
+}
+@article{OpenBabel,
+abstract = {BACKGROUND: A frequent problem in computational modeling is the interconversion of chemical structures between different formats. While standard interchange formats exist (for example, Chemical Markup Language) and de facto standards have arisen (for example, SMILES format), the need to interconvert formats is a continuing problem due to the multitude of different application areas for chemistry data, differences in the data stored by different formats (0D versus 3D, for example), and competition between software along with a lack of vendor-neutral formats. RESULTS: We discuss, for the first time, Open Babel, an open-source chemical toolbox that speaks the many languages of chemical data. Open Babel version 2.3 interconverts over 110 formats. The need to represent such a wide variety of chemical and molecular data requires a library that implements a wide range of cheminformatics algorithms, from partial charge assignment and aromaticity detection, to bond order perception and canonicalization. We detail the implementation of Open Babel, describe key advances in the 2.3 release, and outline a variety of uses both in terms of software products and scientific research, including applications far beyond simple format interconversion. CONCLUSIONS: Open Babel presents a solution to the proliferation of multiple chemical file formats. In addition, it provides a variety of useful utilities from conformer searching and 2D depiction, to filtering, batch conversion, and substructure and similarity searching. For developers, it can be used as a programming library to handle chemical data in areas such as organic chemistry, drug design, materials science, and computational chemistry. It is freely available under an open-source license from http://openbabel.org.},
+author = {O'Boyle, Noel M and Banck, Michael and James, Craig a and Morley, Chris and Vandermeersch, Tim and Hutchison, Geoffrey R},
+doi = {10.1186/1758-2946-3-33},
+issn = {1758-2946},
+journal = {Journal of cheminformatics},
+month = jan,
+number = {1},
+pages = {33},
+pmid = {21982300},
+publisher = {Chemistry Central Ltd},
+title = {{Open Babel: An open chemical toolbox.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3198950\&tool=pmcentrez\&rendertype=abstract},
+volume = {3},
+year = {2011}
+}
+@article{Dieb2018,
+author = {{M. Dieb}, Thaer and Hou, Zhufeng and Tsuda, Koji},
+doi = {10.1063/1.5018065},
+issn = {0021-9606},
+journal = {The Journal of Chemical Physics},
+month = {jun},
+number = {24},
+pages = {241716},
+title = {{Structure prediction of boron-doped graphene by machine learning}},
+url = {http://aip.scitation.org/doi/10.1063/1.5018065},
+volume = {148},
+year = {2018}
+}
+@article{Han2018,
+abstract = {A plausible configuration for Li 0.5 CoO 2 was pinpointed using NSGA-III-assisted DFT calculations involving redox potential, band gap energy and magnetic moment.},
+author = {Han, Woo Gyu and Park, Woon Bae and Singh, Satendra Pal and Pyo, Myoungho and Sohn, Kee-Sun},
+doi = {10.1039/C8CP05284K},
+file = {:home/kirill/Documents/Mendeley Desktop/Han et al. - 2018 - Determination of possible configurations for Li 0.5 CoO 2 delithiated Li-ion battery cathodes via DFT calculations c.pdf:pdf},
+issn = {1463-9076},
+journal = {Physical Chemistry Chemical Physics},
+mendeley-groups = {supercell_scit},
+number = {41},
+pages = {26405--26413},
+title = {{Determination of possible configurations for \ce{Li_{0.5}CoO2} delithiated Li-ion battery cathodes via DFT calculations coupled with a multi-objective non-dominated sorting genetic algorithm (NSGA-III)}},
+url = {http://pubs.rsc.org/en/Content/ArticleLanding/2018/CP/C8CP05284K http://xlink.rsc.org/?DOI=C8CP05284K},
+volume = {20},
+year = {2018}
+}
+@article{Midgley2021,
+abstract = {Computer simulations of alloys' properties often require calculations in a large space of configurations in a supercell of the crystal structure. A common approach is to map density functional theory results into a simplified interaction model using so-called cluster expansions, which are linear on the cluster correlation functions. Alternative descriptors have not been sufficiently explored so far. We show here that a simple descriptor based on the Coulomb matrix eigenspectrum clearly outperforms the cluster expansion for both total energy and bandgap energy predictions in the configurational space of a MgO-ZnO solid solution, a prototypical oxide alloy for bandgap engineering. Bandgap predictions can be further improved by introducing non-linearity via gradient-boosted decision trees or neural networks based on the Coulomb matrix descriptor.},
+author = {Midgley, Scott D. and Hamad, Said and Butler, Keith T. and Grau-Crespo, Ricardo},
+doi = {10.1021/acs.jpclett.1c01031},
+issn = {1948-7185},
+journal = {The Journal of Physical Chemistry Letters},
+month = {jun},
+number = {21},
+pages = {5163--5168},
+pmid = {34032426},
+title = {{Bandgap Engineering in the Configurational Space of Solid Solutions via Machine Learning: \ce{(Mg,Zn)O} Case Study}},
+url = {https://pubs.acs.org/doi/10.1021/acs.jpclett.1c01031},
+volume = {12},
+year = {2021}
+}
+
+
+
